fixes for slider overlap

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1978,7 +1978,7 @@ a.static-nav-item {
   background-color: $bug-section-color;
   border: none;
   border-radius: 4px;
-  padding: 10px;
+  padding: 15px;
   margin-left: 25%;
   padding-bottom: 0
 }
@@ -2006,8 +2006,8 @@ a.static-nav-item {
 }
 
 .nav-tool-content-wrapper {
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-left: -15px;
+  margin-right: -15px;
   background-color: $ac-nav-bg-color;
   padding: 20px;
   border-bottom-left-radius: 4px;
@@ -4299,7 +4299,7 @@ button.tertiary {
   border: none;
   float: right;
   margin-top: 3px;
-  margin-right: -26px;
+  margin-right: -33px;
 }
 
 .remove-input.remove-radio-input {
